# p4n4-cli

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
p4n4/: cli.py  sources.py
p4n4/commands/: add.py  ei.py  init.py  lifecycle.py  remove.py  secret.py  template.py  upgrade.py  validate.py
p4n4/scaffold/: __init__.py
p4n4/utils/: __init__.py  compose.py  manifest.py
test-project/: .p4n4.json  docker-compose.yml
test-project/config/grafana/provisioning/dashboards/json/: iot-overview.json
test-project/config/grafana/provisioning/datasources/: datasources.yml
test-project/config/mosquitto/: acl.example  passwd.example
test-project/config/node-red/: flows.json  settings.js
test-project/scripts/: init-buckets.sh
tests/: conftest.py  test_cli.py
